--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="menu_insert">글쓰기</string>
     <string name="menu_photo">사진첩</string>
     <string name="name">한마디 남겨주세요</string>
+    <string name="upload">사진올리기</string>
     <string name="confirm">Done</string>
     <string name="create_todo">Create Message</string>
     <string name="menu_delete">Delete Message</string>
